--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,11 +5,7 @@ main:
     url: /projects/
   - title: "News"
     url: /news/
-  - title: "Posts"
+  - title: "Blog"
     url: /posts/
-  - title: "Categories"
-    url: /categories/
-  - title: "Tags"
-    url: /tags/
   - title: "About"
     url: /about/
