--- a/_config.yml
+++ b/_config.yml
@@ -60,9 +60,9 @@ author:
   avatar : "/assets/images/bio-photo.PNG"
   bio    : "NLP, ML, and other Obsessions"
   links:
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://"
+    - label: "Email"
+      icon: "far fa-envelope"
+      url: "mailto:ssuresh@umass.edu"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/shilpa15397"
