--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,9 +2,9 @@ main:
   - title: "Resume"
     url: /assets/docs/shilpa-suresh.pdf
   - title: "Projects"
-    url: /portfolio/
+    #url: /portfolio/
     children: 
-      - title: "Projects"
+      - title: "Projects2"
       url: /portfolio/projects/
   - title: "News"
     url: /news/
